syntax = "proto3";
package bitsong.fantoken.v1beta1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/bitsongofficial/go-bitsong/x/fantoken/types";
option (gogoproto.goproto_getters_all) = false;

// Params defines fantoken module's parameters
message Params {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = false;

  cosmos.base.v1beta1.Coin issue_fee = 1 [
    (gogoproto.moretags) = "yaml:\"issue_fee\"",
    (gogoproto.nullable) = false
  ];
}